# tcg

./: Cargo.toml  test.json
crates/action/: Cargo.toml
crates/action/src/: action.rs  lib.rs
crates/card/: Cargo.toml
crates/card/src/: board.rs  card.rs  deck.rs  hand.rs  lib.rs  render.rs
crates/card_sim/: Cargo.toml
crates/card_sim/src/: board.rs  board_state.rs  card.rs  effect.rs  field.rs  hand.rs  lib.rs  query.rs  render.rs  slot.rs  stage.rs  tree.rs
crates/card_sim/src/agent_action/: join.rs  mod.rs  summon.rs
crates/card_sim/src/board/: action.rs  cache.rs  deck.rs  field.rs  hand.rs  lookup.rs  mod.rs  query.rs  sequence.rs  slot.rs  stage.rs  state.rs  tree.rs
crates/card_sim/src/board/agent_action/: mod.rs  summon.rs  target.rs
crates/card_sim/src/board/packet/: join.rs  mod.rs  stage.rs  summon.rs
crates/card_sim/src/card/: mod.rs  visibility.rs
crates/card_sim/src/effect/: common.rs  mod.rs  trigger.rs
crates/card_sim/src/packets/: join.rs  mod.rs  summon.rs
src/: main.rs
src/cards/: mod.rs
src/scene/: dev_room.rs  mod.rs
src/state/: mod.rs
src/ui/: main_menu.rs  mod.rs
tcg/: Cargo.toml
tcg/src/: action.rs  lib.rs  main.rs
tcg/src/board/: hand.rs  mod.rs  slot.rs
tcg/src/board/action/: action.rs  mod.rs  summon.rs
tcg/src/board/client_action/: action.rs  mod.rs  summon.rs
tcg/src/card/: mod.rs  render.rs  summon.rs
tcg/src/cards/: mod.rs
tcg/src/scene/: dev_room.rs
tcg/src/state/: mod.rs
tcg/src/ui/: main_menu.rs  mod.rs
