[workspace]
members = ["crates/*", "tcg"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.14.2" }
bevy_mod_picking = "0.20.1"
bevy_replicon = { version = "0.28.3" }
bevy-inspector-egui = "0.26.0"
serde = "1.0.210"

epithet = { path = "./crates/epithet" }
card_sim = { path = "./crates/card_sim" }
