[package]
name = "tcg"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_mod_picking = { workspace = true }

epithet = { workspace = true }
card_sim = { workspace = true }
action = { workspace = true }

[features]
default = ["render"]
render = ["card_sim/render"]