[package]
name = "tcg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["render", "client"]

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_mod_picking = { workspace = true }
bevy_replicon = { workspace = true }

epithet = { workspace = true }
card_sim = { workspace = true }

[features]
render = ["card_sim/render"]
client = []
