[package]
name = "card_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_replicon = { workspace = true }
bevy_mod_picking = { workspace = true }
serde = { workspace = true }
rand = "0.8.5"
epithet = { workspace = true }
synctree = "0.1.3"
bevy-inspector-egui = { workspace = true }

[features]
default = ["render", "client"]
render = []
client = []